--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
     padding: 0;
 }
 
+body {
+    font-family: 'Lato', sans-serif;
+}
+
 header {
     width: 100%;
     height: 200px;
@@ -28,16 +32,84 @@ header h1 {
 }
 
 main {
-    min-height: calc(100vh - 200px);
+    min-height: calc(100vh - 400px);
 
     max-width: 1000px;
     margin: 2rem auto;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
+main > * {
+    flex-basis: 100%;
+}
+
+input[type=text] {
+    all: unset;
+    padding: 14px;
+    border-radius: 0 10px 10px 0;
+    background: #eee;
+    flex-basis: 100%;
+}
+
+select {
+    margin-left: 10px;
+    padding: 10px;
+}
+
+label {
+    background-color: #159b42;
+    padding: 14px;
+    border-radius: 10px;
+    color: white;
+    min-width: 200px;
+    text-align: center;
+}
+
+
+.event-settings form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.group {
+    display: flex;
+}
+
+.group:first-of-type label {
+    border-radius: 10px 0 0 10px;
+}
+
+input[type="submit"] {
+    all: unset;
+    max-width: 300px;
+    align-self: flex-end;
+    padding: 15px 25px;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
+    background-color: #0FA899;
+    transition: opacity 0.25s ease;
+}
+
+input[type="submit"]:hover {
+    opacity: 0.8;
+}
 
 footer {
     width: 100%;
     background-color: #159b42;
     height: 300px;
 
+}
+
+
+@media only screen and (max-width: 800px) {
+    main {
+        flex-direction: column;
+        gap: 100px;
+    }
 }
