--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ form {
     border-radius: 10px 0 0 10px;
 }
 
-input[type="submit"] {
+input[type="submit"], button {
     all: unset;
     max-width: 300px;
     align-self: flex-end;
@@ -105,7 +105,11 @@ input[type="submit"] {
     transition: opacity 0.25s ease;
 }
 
-input[type="submit"]:hover {
+button {
+    margin-top: 20px;
+}
+
+input[type="submit"]:hover, button:hover {
     opacity: 0.8;
 }
 
@@ -119,6 +123,7 @@ input[type="submit"]:hover {
     border-radius: 10px;
     max-width: 450px;
     width: 100%;
+    box-shadow: 7px 7px 0 #bbb;
 }
 
 #user-calendar {
@@ -142,6 +147,7 @@ input[type="submit"]:hover {
     padding: 10px 0;
     background-color: #0FA899;
     color: white;
+    font-size: 20px;
 }
 
 .day {
