--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header h1 {
 main {
     min-height: calc(100vh - 400px);
 
-    max-width: 1000px;
+    max-width: 1300px;
     padding: 8px;
     margin: 2rem auto;
 
@@ -135,6 +135,10 @@ input[type="submit"]:hover, button:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.user-calendar-settings {
+    display: none;
 }
 
 .calendar-settings h3 {
