--- a/style.css
+++ b/style.css
@@ -115,12 +115,12 @@ input[type="submit"]:hover, button:hover {
 
 
 
-.calendar, #user-calendar {
+.calendar, #user-calendar, #group-calendar {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     column-gap: 1px;
     overflow: hidden;
-    border-radius: 10px;
+    border-radius: 16px;
     max-width: 450px;
     width: 100%;
     box-shadow: 7px 7px 0 #bbb;
@@ -144,6 +144,7 @@ input[type="submit"]:hover, button:hover {
 .calendar-settings h3 {
     margin-bottom: 10px;
 }
+
 
 
 .day-header {
