--- a/style.css
+++ b/style.css
@@ -197,7 +197,15 @@ footer {
     color: white;
 }
 
+.margin-bottom-user {
+    margin-bottom: 20px;
+    padding-left: 150px;
+}
 
+.margin-bottom-group {
+    margin-bottom: 20px;
+    padding-left: 120px;
+}
 
 
 @media only screen and (max-width: 800px) {
